[gd_scene load_steps=2 format=2]

[ext_resource path="res://codes/UI.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Left" type="Button" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 73.0
margin_bottom = 52.0
text = "Left"

[node name="Stop" type="Button" parent="CanvasLayer"]
margin_left = 112.0
margin_top = 32.0
margin_right = 153.0
margin_bottom = 52.0
text = "Stop"

[node name="Right" type="Button" parent="CanvasLayer"]
margin_left = 192.0
margin_top = 32.0
margin_right = 236.0
margin_bottom = 52.0
text = "Right"

[node name="L3" type="ColorRect" parent="CanvasLayer"]
margin_left = 24.0
margin_top = 64.0
margin_right = 48.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 24, 12 )
color = Color( 0, 0, 0, 1 )

[node name="L2" type="ColorRect" parent="CanvasLayer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 88.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 24, 12 )
color = Color( 0, 0, 0, 1 )

[node name="L1" type="ColorRect" parent="CanvasLayer"]
margin_left = 104.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 24, 12 )
color = Color( 0, 0, 0, 1 )

[node name="R1" type="ColorRect" parent="CanvasLayer"]
margin_left = 144.0
margin_top = 64.0
margin_right = 168.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 24, 12 )
color = Color( 0, 0, 0, 1 )

[node name="R2" type="ColorRect" parent="CanvasLayer"]
margin_left = 184.0
margin_top = 64.0
margin_right = 208.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 24, 12 )
color = Color( 0, 0, 0, 1 )

[node name="R3" type="ColorRect" parent="CanvasLayer"]
margin_left = 224.0
margin_top = 64.0
margin_right = 248.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 24, 12 )
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="CanvasLayer/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="CanvasLayer/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="CanvasLayer/Right" to="." method="_on_Right_pressed"]
